# MentOS

./: CMakeLists.txt
libc/: CMakeLists.txt
libc/src/: crt0.s
mentos/: CMakeLists.txt  boot.lds  kernel.lds
mentos/src/: boot.s  kernel.c
mentos/src/descriptor_tables/: exception.s  gdt.s  idt.s  interrupt.S  tss.s
mentos/src/elf/: elf.c
mentos/src/process/: process.c  user.S  user.s
programs/: CMakeLists.txt
programs/tests/: CMakeLists.txt  t_abort.c  t_alarm.c  t_exec.c  t_exec_callee.c  t_fork.c  t_getenv.c  t_gid.c  t_groups.c  t_itimer.c  t_kill.c  t_mem.c  t_msgget.c  t_periodic1.c  t_periodic2.c  t_periodic3.c  t_schedfb.c  t_semflg.c  t_semget.c  t_semop.c  t_setenv.c  t_sigaction.c  t_sigfpe.c  t_siginfo.c  t_sigmask.c  t_sigusr.c  t_sleep.c  t_stopcont.c
