# Add the libc library.
add_library(libc
    ${PROJECT_SOURCE_DIR}/libc/src/stdio.c
    ${PROJECT_SOURCE_DIR}/libc/src/ctype.c
    ${PROJECT_SOURCE_DIR}/libc/src/string.c
    ${PROJECT_SOURCE_DIR}/libc/src/stdlib.c
    ${PROJECT_SOURCE_DIR}/libc/src/math.c
    ${PROJECT_SOURCE_DIR}/libc/src/fcvt.c
    ${PROJECT_SOURCE_DIR}/libc/src/time.c
    ${PROJECT_SOURCE_DIR}/libc/src/strerror.c
    ${PROJECT_SOURCE_DIR}/libc/src/termios.c
    ${PROJECT_SOURCE_DIR}/libc/src/libgen.c
    ${PROJECT_SOURCE_DIR}/libc/src/vsprintf.c
    ${PROJECT_SOURCE_DIR}/libc/src/vscanf.c
    ${PROJECT_SOURCE_DIR}/libc/src/pwd.c
    ${PROJECT_SOURCE_DIR}/libc/src/grp.c
    ${PROJECT_SOURCE_DIR}/libc/src/sched.c
    ${PROJECT_SOURCE_DIR}/libc/src/readline.c
    ${PROJECT_SOURCE_DIR}/libc/src/setenv.c
    ${PROJECT_SOURCE_DIR}/libc/src/assert.c
    ${PROJECT_SOURCE_DIR}/libc/src/abort.c
    ${PROJECT_SOURCE_DIR}/libc/src/io/mm_io.c
    ${PROJECT_SOURCE_DIR}/libc/src/io/debug.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/ipc.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/unistd.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/errno.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/utsname.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/mman.c
    ${PROJECT_SOURCE_DIR}/libc/src/sys/ioctl.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/creat.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getppid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getpid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/exit.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/setsid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getsid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/setpgid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getpgid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/setgid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getgid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/setuid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getuid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/fork.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/read.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/write.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/exec.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/nice.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/open.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/reboot.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/waitpid.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/chdir.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getcwd.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/close.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/stat.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/rmdir.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/mkdir.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/unlink.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/getdents.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/lseek.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/kill.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/signal.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/interval.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/symlink.c
    ${PROJECT_SOURCE_DIR}/libc/src/unistd/readlink.c
    ${PROJECT_SOURCE_DIR}/libc/src/libc_start.c
    ${PROJECT_SOURCE_DIR}/libc/src/crt0.s
)
# Add the includes.
target_include_directories(libc PRIVATE ${PROJECT_SOURCE_DIR}/libc/inc)
# Remove the 'lib' prefix.
set_target_properties(libc PROPERTIES PREFIX "")